--- a/src/app/pages/modules-component/modules-component.component.html
+++ b/src/app/pages/modules-component/modules-component.component.html
@@ -108,11 +108,11 @@
                 <div class="icon">
                     <img src="assets/img/services/icon4.png" alt="image">
                 </div>
-                <h3><a routerLink="/module/hatchery-management">Egg Packing</a></h3>
+                <h3><a routerLink="/module/egg-packing">Egg Packing</a></h3>
                 <p>
                   With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
                 </p>
-                <a routerLink="/module/hatchery-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                <a routerLink="/module/egg-packing" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
             </div>
           </div>
 
@@ -121,12 +121,12 @@
                 <div class="icon">
                     <img src="assets/img/services/icon5.png" alt="image">
                 </div>
-                <h3><a routerLink="/module/veterinary-management">Processing Management</a></h3>
+                <h3><a routerLink="/module/processing-management">Processing Management</a></h3>
                 <p>
                   Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                   and productivity.
                 </p>
-                <a routerLink="/module/veterinary-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                <a routerLink="/module/processing-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
             </div>
           </div>
 
