--- a/src/app/modules/processing-management/processing-management.component.html
+++ b/src/app/modules/processing-management/processing-management.component.html
@@ -1,1 +1,193 @@
-<p>processing-management works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Processing Management</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li><a routerLink="/modules">Modules</a></li>
+              <li>Processing Management</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+
+<section class="services-details-area ptb-100">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-8 col-md-12">
+              <div class="services-details-desc">
+                  <span class="sub-title">Processing Management</span>
+                  <p style="margin-top: 30px;">
+                    Streamline daily production schedules to effectively meet sales demands, maximize resource efficiency, address bottlenecks, and drive the most profitable creation of finished products.
+                  </p>
+                  <p>
+                    I Grow Chicken Poultry Management Software enhances the value of the slaughterhouse by efficiently planning and overseeing the entire poultry supply chain.
+                  </p>
+
+                  <h3>Features</h3>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="image">
+                            <img src="assets/img/projects/img2.jpg" alt="image">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Medication Scheduling</h3>
+                            <p>
+                              Maintain your birds' health effortlessly by utilizing the medication scheduling feature in I Grow Chicken Software. This tool ensures timely and consistent administration of medications,
+                              which is vital for disease prevention and overall well-being. With a proper schedule in place, your birds will receive the treatments they need to thrive.
+                            </p>
+                        </div>
+                    </div>
+                  </div>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Detailed Health Reports</h3>
+                            <p>
+                              Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
+                              schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/blob.jpg" alt="reports">
+                      </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                  <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
+                      </div>
+                  </div>
+
+                  <div class="col-lg-6 col-md-6">
+                      <div class="content">
+                          <h3>Minimize Waste</h3>
+                          <p>
+                            Monitoring Indent Order-Based Production allows you to create the precise quantity of needed, minimizing waste and saving costs.
+                            This-encompassing strategy boosts overall efficiency and profitability on your farm. Our feed mill management module allows you to minimize waste by
+                            monitoring essential parameters throughout the production process.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12">
+              <div class="services-details-info">
+                  <div class="download-file">
+                      <h3>Resources</h3>
+
+                      <ul>
+                          <li><a href="javascript:void(0);">PDF Download <i class='bx bxs-file-pdf'></i></a></li>
+                      </ul>
+                  </div>
+
+                  <div class="services-contact-info">
+                      <h3>Contact Info</h3>
+
+                      <ul>
+                          <li>
+                              <div class="icon">
+                                  <i class='bx bx-user-pin'></i>
+                              </div>
+                              <span>Phone:</span>
+                              <a href="tel:+31 654 31 3771">+31 654 31 3771</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Feed Mill?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                   Get in touch with us today or schedule a demo with one of our experts.
+                  </p>
+
+                  <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
+                  </a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area pt-100 pb-70 bg-f1f8fb">
+  <div class="container">
+      <div class="section-title">
+          <h2>More Modules You Might Like</h2>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                  <p>
+                    Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                  </p>
+                  <a routerLink="/module/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/veterinary-management">Egg Packing</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
