--- a/src/app/modules/processing-management/processing-management.component.html
+++ b/src/app/modules/processing-management/processing-management.component.html
@@ -31,8 +31,6 @@
                     I Grow Chicken Poultry Management Software enhances the value of the slaughterhouse by efficiently planning and overseeing the entire poultry supply chain.
                   </p>
 
-                  <h3>Features</h3>
-
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="image">
@@ -42,10 +40,13 @@
 
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
-                            <h3>Medication Scheduling</h3>
+                            <h3>Maximize Your Plant's Output!</h3>
                             <p>
-                              Maintain your birds' health effortlessly by utilizing the medication scheduling feature in I Grow Chicken Software. This tool ensures timely and consistent administration of medications,
-                              which is vital for disease prevention and overall well-being. With a proper schedule in place, your birds will receive the treatments they need to thrive.
+                              Optimize your processing plant's performance by refining workflow processes to deliver superior meat quality and increased productivity. Implement precise categorization and
+                              systems for meat types to fulfill customer requirements with accuracy.
+                            </p>
+                            <p>
+                              Furthermore, comprehensive plant processing reports enable you to identify inefficiencies and drive improvements, ensuring seamless and more profitable operations.
                             </p>
                         </div>
                     </div>
@@ -54,10 +55,10 @@
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
-                            <h3>Detailed Health Reports</h3>
+                            <h3>Easily Manage the Processing Operations</h3>
                             <p>
-                              Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
-                              schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
+                              Effectively monitor and manage the birds arriving at your facility to maintain complete oversight of your inventory. Ensure seamless operations by supervising the bird hanging process,
+                              and minimize waste by implementing measures to prevent shrinkage during production. By adopting these strategies, you can maximize efficiency and optimize the value of each bird processed.
                             </p>
                         </div>
                     </div>
