--- a/src/app/modules/hatchery-module/hatchery-module.component.html
+++ b/src/app/modules/hatchery-module/hatchery-module.component.html
@@ -139,12 +139,12 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                  <h3><a routerLink="/modules/detail/veterinary-management">Veterinary Management</a></h3>
                     <p>
                       Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                       and productive birds.
                     </p>
-                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
@@ -153,9 +153,10 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/finance-module">Finance Module</a></h3>
-                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
-                  <a routerLink="/module/finance-module" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                  <h3><a routerLink="/modules/detail/finance-module">Finance Module</a></h3>
+                  <p>Automate financial operations for your poultry farm. Manage financial transactions, accounting, budgeting
+                    and reporting.</p>
+                  <a routerLink="/modules/detail/finance-module" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
@@ -164,11 +165,11 @@
                 <div class="icon">
                     <img src="assets/img/services/icon1.png" alt="image">
                 </div>
-                <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                <h3><a routerLink="/modules/detail/feedmill-management">Feedmill Management</a></h3>
                 <p>
                   Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
                 </p>
-                <a routerLink="/module/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                <a routerLink="/modules/detail/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
             </div>
         </div>
       </div>
