--- a/src/app/modules/processing-management/processing-management.component.html
+++ b/src/app/modules/processing-management/processing-management.component.html
@@ -68,26 +68,7 @@
                           <img src="assets/img/blob.jpg" alt="reports">
                       </div>
                     </div>
-                </div>
-
-                <div class="row align-items-center">
-                  <div class="col-lg-6 col-md-6">
-                      <div class="image">
-                          <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
-                      </div>
-                  </div>
-
-                  <div class="col-lg-6 col-md-6">
-                      <div class="content">
-                          <h3>Minimize Waste</h3>
-                          <p>
-                            Monitoring Indent Order-Based Production allows you to create the precise quantity of needed, minimizing waste and saving costs.
-                            This-encompassing strategy boosts overall efficiency and profitability on your farm. Our feed mill management module allows you to minimize waste by
-                            monitoring essential parameters throughout the production process.
-                          </p>
-                      </div>
-                  </div>
-                </div>
+                </div>                
               </div>
           </div>
 
@@ -131,7 +112,7 @@
 
           <div class="col-lg-6 col-md-12">
               <div class="project-start-content">
-                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Feed Mill?</h2>
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Intrested in our processing management module?</h2>
                   <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                    Get in touch with us today or schedule a demo with one of our experts.
                   </p>
@@ -170,12 +151,12 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/veterinary-management">Egg Packing</a></h3>
+                  <h3><a routerLink="/module/egg-packing">Egg Packing</a></h3>
                     <p>
                       Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                       and productive birds.
                     </p>
-                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                    <a routerLink="/module/egg-packing" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
