--- a/src/app/modules/veterinary-module/veterinary-module.component.html
+++ b/src/app/modules/veterinary-module/veterinary-module.component.html
@@ -156,11 +156,11 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                  <h3><a routerLink="/modules/detail/broiler-management">Broiler Management</a></h3>
                   <p>
                     Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
                   </p>
-                  <a routerLink="/module/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                  <a routerLink="/modules/detail/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
@@ -169,12 +169,11 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/veterinary-management">Egg Packing</a></h3>
+                  <h3><a routerLink="/modules/detail/egg-packing">Egg Packing</a></h3>
                     <p>
-                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
-                      and productive birds.
+                        With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production. 
                     </p>
-                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/egg-packing" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
@@ -183,9 +182,9 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                  <h3><a routerLink="/modules/detail/layer-management">Layer Management</a></h3>
                   <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
-                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                  <a routerLink="/modules/detail/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
       </div>
