--- a/src/app/pages/modules-component/modules-component.component.html
+++ b/src/app/pages/modules-component/modules-component.component.html
@@ -20,11 +20,11 @@
                     <div class="icon">
                         <img src="assets/img/services/icon1.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                    <h3><a routerLink="/modules/detail/broiler-management">Broiler Management</a></h3>
                     <p>
                       Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
                     </p>
-                    <a routerLink="/module/broiler-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/broiler-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -33,9 +33,9 @@
                     <div class="icon">
                         <img src="assets/img/services/icon2.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/breeder-management">Breeder Management</a></h3>
+                    <h3><a routerLink="/modules/detail/breeder-management">Breeder Management</a></h3>
                     <p>Track the performance of your parent and grandparent birds with precision to enhance their health and yield.</p>
-                    <a routerLink="/module/breeder-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/breeder-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -44,9 +44,9 @@
                     <div class="icon">
                         <img src="assets/img/services/icon3.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                    <h3><a routerLink="/modules/detail/layer-management">Layer Management</a></h3>
                     <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
-                    <a routerLink="/module/layer-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/layer-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -55,11 +55,11 @@
                     <div class="icon">
                         <img src="assets/img/services/icon4.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/hatchery-management">Hatchery Management</a></h3>
+                    <h3><a routerLink="/modules/detail/hatchery-management">Hatchery Management</a></h3>
                     <p>
                       Manage the entire life cycle of hatchery operations from setting to hatching, eliminating the need for manual calculations and calendars.
                     </p>
-                    <a routerLink="/module/hatchery-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/hatchery-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -68,12 +68,12 @@
                     <div class="icon">
                         <img src="assets/img/services/icon5.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                    <h3><a routerLink="/modules/detail/veterinary-management">Veterinary Management</a></h3>
                     <p>
                       Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                       and productive birds.
                     </p>
-                    <a routerLink="/module/veterinary-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/veterinary-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -82,11 +82,11 @@
                     <div class="icon">
                         <img src="assets/img/services/icon6.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                    <h3><a routerLink="/modules/detail/feedmill-management">Feedmill Management</a></h3>
                     <p>
                       Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
                     </p>
-                    <a routerLink="/module/feedmill-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/feedmill-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -95,11 +95,11 @@
                   <div class="icon">
                       <img src="assets/img/services/icon6.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/finance-module">Finance Module</a></h3>
+                  <h3><a routerLink="/modules/detail/finance-module">Finance Module</a></h3>
                   <p>
                     With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
                   </p>
-                  <a routerLink="/module/finance-module" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                  <a routerLink="/modules/detail/finance-module" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                </div>
             </div>
 
@@ -108,11 +108,11 @@
                 <div class="icon">
                     <img src="assets/img/services/icon4.png" alt="image">
                 </div>
-                <h3><a routerLink="/module/egg-packing">Egg Packing</a></h3>
+                <h3><a routerLink="/modules/detail/egg-packing">Egg Packing</a></h3>
                 <p>
                   With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
                 </p>
-                <a routerLink="/module/egg-packing" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                <a routerLink="/modules/detail/egg-packing" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
             </div>
           </div>
 
@@ -121,12 +121,12 @@
                 <div class="icon">
                     <img src="assets/img/services/icon5.png" alt="image">
                 </div>
-                <h3><a routerLink="/module/processing-management">Processing Management</a></h3>
+                <h3><a routerLink="/modules/detail/processing-management">Processing Management</a></h3>
                 <p>
                   Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                   and productivity.
                 </p>
-                <a routerLink="/module/processing-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                <a routerLink="/modules/detail/processing-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
             </div>
           </div>
 
