--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -34,10 +34,10 @@
                 <div class="single-footer-widget">
                     <h3>Modules</h3>
                     <ul class="footer-links-list">
-                        <li><a routerLink="/module/finance-module">Finance</a></li>
-                        <li><a routerLink="/module/veterinary-management">Veterinary</a></li>
-                        <li><a routerLink="module/layer-management">Layer Management</a></li>
-                        <li><a routerLink="module/broiler-management">Broiler Management</a></li>
+                        <li><a routerLink="/modules/detail/finance-module">Finance</a></li>
+                        <li><a routerLink="/modules/detail/veterinary-management">Veterinary</a></li>
+                        <li><a routerLink="modules/detail/layer-management">Layer Management</a></li>
+                        <li><a routerLink="modules/detail/broiler-management">Broiler Management</a></li>
                         <li><a routerLink="/modules">All Modules</a></li>
                     </ul>
                 </div>
