--- a/src/app/modules/egg-packing/egg-packing.component.html
+++ b/src/app/modules/egg-packing/egg-packing.component.html
@@ -154,6 +154,21 @@
         </div>
   
         <div class="row">
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon1.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/processing-management">Processing Management</a></h3>
+                      <p>
+                        Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                        and productive birds.
+                      </p>
+                      <a routerLink="/module/processing-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="icon">
@@ -165,21 +180,8 @@
                     </p>
                     <a routerLink="/module/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
                 </div>
-            </div>
-  
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
-                    <div class="icon">
-                        <img src="assets/img/services/icon1.png" alt="image">
-                    </div>
-                    <h3><a routerLink="/module/veterinary-management">Egg Packing</a></h3>
-                      <p>
-                        Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
-                        and productive birds.
-                      </p>
-                      <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
-                </div>
-            </div>
+            </div> 
+            
   
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
