--- a/src/app/modules/layer-management/layer-management.component.html
+++ b/src/app/modules/layer-management/layer-management.component.html
@@ -144,46 +144,50 @@
   <div class="container">
       <div class="section-title">
           <h2>More Modules You Might Like</h2>
-      </div>
+      </div>      
 
       <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                  <div class="icon">
-                      <img src="assets/img/services/icon1.png" alt="image">
-                  </div>
-                  <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
-                  <p>
-                    Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
-                  </p>
-                  <a routerLink="/module/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
-              </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
-                  <div class="icon">
-                      <img src="assets/img/services/icon1.png" alt="image">
-                  </div>
-                  <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon1.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/modules/detail/veterinary-management">Veterinary Management</a></h3>
                     <p>
-                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
-                      and productive birds.
+                        Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                        and productive birds.
                     </p>
-                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
-              </div>
-          </div>
+                    <a routerLink="/modules/detail/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                </div>
+            </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                  <div class="icon">
-                      <img src="assets/img/services/icon1.png" alt="image">
-                  </div>
-                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
-                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
-                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
-              </div>
-          </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon1.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/modules/detail/feedmill-management">Feedmill Management</a></h3>
+                    <p>
+                    Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
+                    </p>
+                    <a routerLink="/modules/detail/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+          
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon1.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/modules/detail/broiler-management">Broiler Management</a></h3>
+                    <p>
+                      Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                    </p>
+                    <a routerLink="/modules/detail/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                </div>
+            </div>
       </div>
   </div>
 </section>
