--- a/src/app/pages/modules-component/modules-component.component.html
+++ b/src/app/pages/modules-component/modules-component.component.html
@@ -97,7 +97,7 @@
                   </div>
                   <h3><a routerLink="/modules/detail/finance-module">Finance Module</a></h3>
                   <p>
-                    With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
+                    The Finance module aims to simplify and automate the financial processes for poultry farmers.
                   </p>
                   <a routerLink="/modules/detail/finance-module" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                </div>
