--- a/src/app/modules/finance-module/finance-module.component.html
+++ b/src/app/modules/finance-module/finance-module.component.html
@@ -1,1 +1,194 @@
-<p>finance-module works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Finance Module</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li><a routerLink="/modules">Modules</a></li>
+              <li>Finance Module</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+
+<section class="services-details-area ptb-100">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-8 col-md-12">
+              <div class="services-details-desc">
+                  <span class="sub-title">Finance Module</span>
+                  <p style="margin-top: 30px;">
+                    The Finance module aims to simplify and automate the financial processes for poultry farmers.
+                  </p>
+                  <p>
+                    This module offers a range of tools and features to assist farmers in managing their financial transactions,
+                    including billing, payments, and collections. It also includes features such as accounting, budgeting, and reporting.
+                    Additionally, it provides calculations and reports for bird costs, egg costs, and feed costs.
+                  </p>
+
+                  <h2>Core Features</h2>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="image">
+                            <img src="assets/img/projects/img2.jpg" alt="image">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Manage Payments</h3>
+                            <p>
+                              PoultryCare ERP streamlines payment management by enabling you to effortlessly manage payments for feed, supplies,
+                              and services in a single platform. It allows you to monitor outgoing funds, review payment history, and ensure timely payments to suppliers,
+                              vendors, and service providers, keeping your financial obligations well-organized and current.
+                            </p>
+                        </div>
+                    </div>
+                  </div>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Get detailed Health Reports</h3>
+                            <p>
+                              Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
+                              schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/blob.jpg" alt="reports">
+                      </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                  <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/doc-with-hen.jpg" alt="doctor-with-hen-image" title="Image from https://images.bloombergtechnoz.com/data/2024/06/image-20240613103743.jpg">
+                      </div>
+                  </div>
+
+                  <div class="col-lg-6 col-md-6">
+                      <div class="content">
+                          <h3>Flexibility & Customization</h3>
+                          <p>
+                            With our software, we allow you to customize your medication schedule to fit your specific needs. You can add or remove disease types and adjust mortality reasons,
+                            to appear visible in your postmoterm resports to give you custom tailored experience and avoid cluttered and unrealistic data for your farm and flock.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12">
+              <div class="services-details-info">
+                  <div class="download-file">
+                      <h3>Resources</h3>
+
+                      <ul>
+                          <li><a href="javascript:void(0);">PDF Download <i class='bx bxs-file-pdf'></i></a></li>
+                      </ul>
+                  </div>
+
+                  <div class="services-contact-info">
+                      <h3>Contact Info</h3>
+
+                      <ul>
+                          <li>
+                              <div class="icon">
+                                  <i class='bx bx-user-pin'></i>
+                              </div>
+                              <span>Phone:</span>
+                              <a href="tel:+31 654 31 3771">+31 654 31 3771</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Feed Mill?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                   Get in touch with us today or schedule a demo with one of our experts.
+                  </p>
+
+                  <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
+                  </a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area pt-100 pb-70 bg-f1f8fb">
+  <div class="container">
+      <div class="section-title">
+          <h2>More Modules You Might Like</h2>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/modules/detail/broiler-management">Broiler Management</a></h3>
+                  <p>
+                    Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                  </p>
+                  <a routerLink="/modules/detail/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/modules/detail/egg-packing">Egg Packing</a></h3>
+                    <p>
+                        With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
+                    </p>
+                    <a routerLink="/modules/detail/egg-packing" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/modules/detail/layer-management">Layer Management</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/modules/detail/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
