--- a/src/app/modules/finance-module/finance-module.component.html
+++ b/src/app/modules/finance-module/finance-module.component.html
@@ -46,7 +46,7 @@
                         <div class="content">
                             <h3>Manage Payments</h3>
                             <p>
-                              PoultryCare ERP streamlines payment management by enabling you to effortlessly manage payments for feed, supplies,
+                              I Grow Chicken software streamlines payment management by enabling you to effortlessly manage payments for feed, supplies,
                               and services in a single platform. It allows you to monitor outgoing funds, review payment history, and ensure timely payments to suppliers,
                               vendors, and service providers, keeping your financial obligations well-organized and current.
                             </p>
@@ -57,10 +57,9 @@
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
-                            <h3>Get detailed Health Reports</h3>
+                            <h3>Effective Accounting</h3>
                             <p>
-                              Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
-                              schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
+                              Our software enables you to monitor your daily income and expenses, create invoices, generate reports for customers and vendors, export data to Excel, manage payments and receivables, and efficiently handle bulk transactions.
                             </p>
                         </div>
                     </div>
@@ -81,7 +80,7 @@
 
                   <div class="col-lg-6 col-md-6">
                       <div class="content">
-                          <h3>Flexibility & Customization</h3>
+                          <h3>Evaluate financial performance and make informed decisions</h3>
                           <p>
                             With our software, we allow you to customize your medication schedule to fit your specific needs. You can add or remove disease types and adjust mortality reasons,
                             to appear visible in your postmoterm resports to give you custom tailored experience and avoid cluttered and unrealistic data for your farm and flock.
