--- a/src/app/modules/finance-module/finance-module.component.html
+++ b/src/app/modules/finance-module/finance-module.component.html
@@ -74,7 +74,7 @@
                 <div class="row align-items-center">
                   <div class="col-lg-6 col-md-6">
                       <div class="image">
-                          <img src="assets/img/doc-with-hen.jpg" alt="doctor-with-hen-image" title="Image from https://images.bloombergtechnoz.com/data/2024/06/image-20240613103743.jpg">
+                          <img src="assets/img/improved-performance.png" alt="improved-performance" title="Image from https://residexsoftware.com/wp-content/uploads/2022/05/Screen-Shot-2022-05-11-at-11.39.55-PM.png">
                       </div>
                   </div>
 
@@ -82,8 +82,8 @@
                       <div class="content">
                           <h3>Evaluate financial performance and make informed decisions</h3>
                           <p>
-                            With our software, we allow you to customize your medication schedule to fit your specific needs. You can add or remove disease types and adjust mortality reasons,
-                            to appear visible in your postmoterm resports to give you custom tailored experience and avoid cluttered and unrealistic data for your farm and flock.
+                            With our software, we allow you to analyze key metrics such as feed costs, production rates, and market prices. By leveraging detailed financial reports and real-time data,
+                            poultry managers can identify trends, optimize resource allocation, and enhance profitability. 
                           </p>
                       </div>
                   </div>
