--- a/src/app/modules/egg-packing/egg-packing.component.html
+++ b/src/app/modules/egg-packing/egg-packing.component.html
@@ -11,13 +11,13 @@
             </ul>
         </div>
     </div>
-  
+
     <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
     <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
     <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
   </section>
-  
-  
+
+
   <section class="services-details-area ptb-100">
     <div class="container">
         <div class="row">
@@ -31,16 +31,16 @@
                       This module includes features such as medication schedule, alert and notification, and medication cost included to bird cost. Overall, this module will help farmers to
                       keep track of medication, reduce the risk of disease outbreak and improve the bird's health.
                     </p>
-  
+
                     <h3>Features</h3>
-  
+
                     <div class="row align-items-center">
                       <div class="col-lg-6 col-md-6">
                           <div class="image">
                               <img src="assets/img/projects/img2.jpg" alt="image">
                           </div>
                       </div>
-  
+
                       <div class="col-lg-6 col-md-6">
                           <div class="content">
                               <h3>Medication Scheduling</h3>
@@ -51,7 +51,7 @@
                           </div>
                       </div>
                     </div>
-  
+
                     <div class="row align-items-center">
                       <div class="col-lg-6 col-md-6">
                           <div class="content">
@@ -62,21 +62,21 @@
                               </p>
                           </div>
                       </div>
-  
+
                       <div class="col-lg-6 col-md-6">
                         <div class="image">
                             <img src="assets/img/blob.jpg" alt="reports">
                         </div>
                       </div>
                   </div>
-  
+
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="image">
                             <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
                         </div>
                     </div>
-  
+
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
                             <h3>Minimize Waste</h3>
@@ -88,24 +88,17 @@
                         </div>
                     </div>
                   </div>
-  
-  
+
+
                 </div>
             </div>
-  
+
             <div class="col-lg-4 col-md-12">
                 <div class="services-details-info">
-                    <div class="download-file">
-                        <h3>Resources</h3>
-  
-                        <ul>
-                            <li><a href="javascript:void(0);">PDF Download <i class='bx bxs-file-pdf'></i></a></li>
-                        </ul>
-                    </div>
-  
+
                     <div class="services-contact-info">
-                        <h3>Contact Info</h3>
-  
+                        <h3>Contact us today</h3>
+
                         <ul>
                             <li>
                                 <div class="icon">
@@ -121,7 +114,7 @@
         </div>
     </div>
   </section>
-  
+
   <section class="project-start-area ptb-100">
     <div class="container">
         <div class="row align-items-center">
@@ -130,14 +123,14 @@
                     <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
                 </div>
             </div>
-  
+
             <div class="col-lg-6 col-md-12">
                 <div class="project-start-content">
                     <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Feed Mill?</h2>
                     <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                      Get in touch with us today or schedule a demo with one of our experts.
                     </p>
-  
+
                     <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
                      onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
                     </a>
@@ -146,13 +139,13 @@
         </div>
     </div>
   </section>
-  
+
   <section class="services-area pt-100 pb-70 bg-f1f8fb">
     <div class="container">
         <div class="section-title">
             <h2>More Modules You Might Like</h2>
         </div>
-  
+
         <div class="row">
 
             <div class="col-lg-4 col-md-6 col-sm-6">
@@ -160,12 +153,12 @@
                     <div class="icon">
                         <img src="assets/img/services/icon1.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/processing-management">Processing Management</a></h3>
+                    <h3><a routerLink="/modules/detail/processing-management">Processing Management</a></h3>
                       <p>
                         Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
                         and productive birds.
                       </p>
-                      <a routerLink="/module/processing-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                      <a routerLink="/modules/detail/processing-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
@@ -174,26 +167,25 @@
                     <div class="icon">
                         <img src="assets/img/services/icon1.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                    <h3><a routerLink="/modules/detail/broiler-management/">Broiler Management</a></h3>
                     <p>
-                      Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                      Monitor your broiler birds' performance, enhance their health and body weight to achieve the best and superior Feed Conversion Ratio.
                     </p>
-                    <a routerLink="/module/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/broiler-management/" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
                 </div>
-            </div> 
-            
-  
+            </div>
+
+
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="icon">
                         <img src="assets/img/services/icon1.png" alt="image">
                     </div>
                     <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
-                    <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                    <p>Oversee flock performance and plan egg production. Easily handle daily transactions and ensure the completion of the entire cycle.</p>
                     <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
                 </div>
             </div>
         </div>
     </div>
   </section>
-  
